--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./src/server.js",
+    "dev": "export GOOGLE_APPLICATION_CREDENTIALS=./src/config/key.json && nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "socket.io": "^4.2.0",
+    "validator": "^13.6.0",
     "validators": "^0.3.1"
   }
 }
