--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "socket.io": "^4.2.0",
+    "string-similarity": "^4.0.4",
     "validator": "^13.6.0",
     "validators": "^0.3.1"
   }
