Add: login and register component

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -21,3 +21,37 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+// <div>
+{
+  /* <div */
+}
+// style={{ display: "flex", justifyContent: "center", marginTop: "2rem" }}
+// >
+{
+  /* <Title level={2}> */
+}
+{
+  /* CHAT BOT APP&nbsp; */
+}
+{
+  /* <Icon type="robot" /> */
+}
+{
+  /* </Title> */
+}
+{
+  /* </div> */
+}
+{
+  /* <div style={{ display: "flex", justifyContent: "center" }}> */
+}
+{
+  /* <Chatbot /> */
+}
+{
+  /* </div> */
+}
+{
+  /* </div> */
+}
