--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chec/commerce.js": "^2.8.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.1",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.18.0",
     "antd": "^3.26.5",
+    "axios": "^0.21.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^7.15.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-wavify": "^1.5.4",
     "uuid": "^3.3.2"
   },
   "scripts": {
