--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-wavify": "^1.5.4",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "validator": "^13.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
