--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,14 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.18.0",
     "antd": "^3.26.5",
     "axios": "^0.21.4",
+    "emailjs-com": "^3.2.0",
+    "nodemailer": "^6.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
