--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./src/server.js",
+    "dev": "export GOOGLE_APPLICATION_CREDENTIALS=./src/config/key.json && nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
